[package]
name = "readingtime"
authors = ["Matteo Franceschini"]
version = "0.1.0"
edition = "2021"
description = "Reading time calculator bot for Telegram"
license = "BSD-3-Clause-Clear"
readme = "README.md"
repository = "https://github.com/matteof04/readingtime"

[dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"
regex = "1.10.2"
reqwest = "0.11.22"
select = "0.6.0"
teloxide = { version = "0.12.2", features = ["macros"] }
thiserror = "1.0.57"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
